corpus/cpp/overload/case-01/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [type_mismatch] type or overload mismatch @ src/main.cpp:5:5
help: compare the expected type and actual argument at the call site
want: int, int
got : int
via : void takes(int, int) @ src/main.cpp:1:6  +3 candidates
| src/main.cpp:5:5
|     takes(1);
|     ^
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=child_role=candidate, message_contains=no matching, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output